# bsb-neuron

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  external_pr.yml  main.yaml  main.yml  pull_request.yml
bsb_neuron/: __init__.py  adapter.py  cell.py  connection.py
bsb_neuron/devices/: __init__.py  current_clamp.py  lfp_recorder.py  membrane_current_recorder.py  spike_generator.py  spike_recorder.py  synapse_recorder.py  voltage_clamp.py  voltage_recorder.py
tests/: test_devices.py  test_models.py  test_neuron.py
