[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bsb-neuron"
authors = [{ name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "bsb-core>=4.0.0b0,<=4.0.0b9999",
    "nrn-patch>=4.0.0b3,<=4.0.0b9999",
    "arborize[neuron]>=4.0.0b1,<=4.0.0b9999"
]

[project.entry-points."bsb.simulation_backends"]
neuron = "bsb_neuron"

[project.optional-dependencies]
test = [
    "bsb-json>=0.0.0b0",
    "bsb-test>=0.0.0b0"
]

[tool.flit.module]
name = "bsb_neuron"

[project.optional-dependencies]
test = ["bsb-test>=0.0.0b0,<=0.0.0b9999", "coverage~=7.0"]
dev = [
    "pre-commit~=3.5",
    "black~=23.11",
    "isort~=5.12",
    "bump2version~=1.0"
]

[tool.isort]
profile = "black"